Add query, handler and controller method for GetStudentById

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="Students\" />
+    <Folder Include="Students\Commands\" />
     <Folder Include="Students\Queries\" />
   </ItemGroup>
 
